...
          {!shouldLoadRemote ? (
            <Pressable
              style={styles.defaultButton}
              onPress={() => setShouldLoadRemote(true)}
            >
              <Text
                testID="load-remote-button"
                style={styles.defaultButtonText}
              >
                Load Remote Component
              </Text>
            </Pressable>
          ) : (
...
